ocaml/testsuite/tests/typing-layouts/syntax_err_unboxed.compilers.reference
Line 14, characters 9-16:
14 | type t : unboxed = { single_field : string };;
              ^^^^^^^
Error: Unknown layout unboxed

